--- a/style/style.css
+++ b/style/style.css
@@ -435,3 +435,102 @@ ul li {
 .separador4 img {
     width: 4vw;
 }
+
+.galeria {
+    grid-column: 1/span 8;
+    grid-row: 3/span 1;
+    background: linear-gradient(to bottom, white 70%, #fc6734 30%);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    gap: 1%;
+}
+
+.galeria img {
+    padding: 0;
+    border: 2px solid black;
+    border-radius: 30%;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+    margin-top: 3%;
+}
+
+.img1 {
+    margin-left: 2%;
+    object-fit: contain;
+    position: relative;
+    width: 28%;
+}
+
+.img1 img {
+    width: 90%;
+}
+
+.img2 {
+    object-fit: contain;
+    position: relative;
+    width: 28%;
+    height: 45%;
+}
+
+.img2 img {
+    position: relative;
+    width: 80%;
+    height: 100%;
+}
+
+.img3 {
+    object-fit: contain;
+    position: relative;
+    width: 40%;
+}
+
+.img3 img {
+    position: relative;
+    width: 100%;
+    right: 13%;
+}
+
+.img4 {
+    object-fit: contain;
+    margin-left: 2%;
+    position: relative;
+    width: 30%;
+}
+
+.img4 img {
+    position: relative;
+    width: 80%;
+    bottom: 40%;
+}
+
+.img5 {
+    object-fit: contain;
+    position: relative;
+    width: 30%;
+}
+
+.img5 img {
+    position: relative;
+    width: 100%;
+}
+
+.img6 img {
+    position: relative;
+    width: 30%;
+    bottom: 100%;
+    margin-left: 2%;
+}
+
+.img7 {
+    object-fit: contain;
+    position: relative;
+    width: 30%;
+}
+
+.img7 img {
+    position: relative;
+    width: 100%;
+    bottom: 180%;
+    margin-left: 220%;
+}
